[package]
name = "rxnow"
version = "0.0.4"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Gabriel Falcão <gabriel@nacaolivre.org>"]
description = "aims at sorta-kinda drop-in replace GNU/Sed et al."
documentation = "https://docs.rs/rxnow"
readme = "README.md"
homepage = "https://github.com/gabrielfalcao/rxnow"
exclude = ["tests"]

[dependencies]
clap = { version = "4.4.6", features = ["derive", "unicode", "env", "wrap_help", "string"] }
console = "0.15.7"
iocore = "0.100.1"
regex = { version = "1.9.6", features = ["use_std", "pattern", "logging"] }
strip-ansi-escapes = "0.2.0"
walkdir = "2.4.0"

[lib]
name = "rxnow"
path = "src/lib.rs"
